aks/jupyter-us-east2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: nginx
    konghq.com/override: "https-only"
    cert-manager.io/issuer: "letsencrypt-prod-app"
    certmanager.k8s.io/acme-challenge-type: "dns01"
    certmanager.k8s.io/acme-dns01-provider: "digitalocean"
    nginx.ingress.kubernetes.io/auth-url: "https://github-oauth.us-west2.mesolitica.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://github-oauth.us-west2.mesolitica.com/oauth2/start?rd=$scheme://$host$request_uri"
    nginx.org/client-max-body-size: 1000M
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
spec:
  tls:
    - hosts:
        - jupyter.us-west2.mesolitica.com
      secretName: wildcard-cert-app
  rules:
    - host: jupyter.us-west2.mesolitica.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jupyter
                port:
                  number: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: jupyter
  labels:
    app: jupyter
spec:
  ports:
    - port: 8888
  clusterIP: None
  selector:
    app: jupyter
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jupyter
spec:
  selector:
    matchLabels:
      app: jupyter
  serviceName: "jupyter"
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      # tolerations:
      #   - key: "kubernetes.azure.com/scalesetpriority"
      #     operator: "Equal"
      #     value: "spot"
      #     effect: "NoSchedule"
      #   - key: "sku"
      #     operator: "Equal"
      #     value: "gpu"
      #     effect: "NoSchedule"
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #         - matchExpressions:
      #             - key: "kubernetes.azure.com/scalesetpriority"
      #               operator: In
      #               values:
      #                 - "spot"
      #             - key: "agentpool"
      #               operator: In
      #               values:
      #                 - "cpu"
      terminationGracePeriodSeconds: 10
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: my-azurefile
      containers:
        - name: jupyter
          image: mesoliticadev/jupyter-gpu-devel:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
          volumeMounts:
            - name: storage
              mountPath: /home/ubuntu
            - name: volume
              mountPath: /home/ubuntu/share
          command: ["/bin/bash", "-c"]
          args:
            [
              "sudo chmod -R 777 /home/ubuntu; pm2 resurrect; jupyter notebook --NotebookApp.token='' --ip=0.0.0.0 --NotebookApp.allow_origin='*'",
            ]

      securityContext:
        fsGroupChangePolicy: "OnRootMismatch"

  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: default
        resources:
          requests:
            storage: 500Gi
